k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arriendatufinca-deployment
  namespace: arriendatufinca
spec:
  selector:
    matchLabels:
      app: arriendatufinca-deployment
  replicas: 1
  template:
    metadata:
      labels:
         app: arriendatufinca-deployment
    spec:
      imagePullSecrets:
         - name: github-secret
      containers:
         - name: estudiante
           image: localhost:5000/arriendatufinca:latest
           ports:
              - containerPort: 8080
           
---
apiVersion: v1
kind: Service
metadata:
  name: arriendatufinca-service
  namespace: arriendatufinca
spec:
  selector:
    app: arriendatufinca
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
