k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arriendatufinca-ingress
  namespace: arriendatufinca
spec:
   ingressClassName: public
   rules:
   - host: 
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: arriendatufinca-service
             port:
               number: 8080
